Set up project structure with core layers: frontend, data access, business logic, and persistence. Added basic authentication and updated README.

--- a/TemplateTPIntegrador/Negocio/Negocio.csproj
+++ b/TemplateTPIntegrador/Negocio/Negocio.csproj
@@ -41,8 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ValidarcionesUtiles.cs" />
-    <Compile Include="LoginNegocio.cs" />
+    <Compile Include="UTILS\LoginNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
