--- a/TemplateTPIntegrador/Negocio/Negocio.csproj
+++ b/TemplateTPIntegrador/Negocio/Negocio.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C45177FE-6854-49E9-AA70-13FD2CDE1F69}</ProjectGuid>
+    <ProjectGuid>{9007BBFB-CB3A-4634-ABEE-91E04E9A0BBB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Negocio</RootNamespace>
@@ -41,21 +41,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-<<<<<<< HEAD
-    <Compile Include="UTILS\LoginNegocio.cs" />
-=======
-    <Compile Include="LoginNegocio.cs" />
->>>>>>> 29e51dd603d0caacadf1a713db7f24c09547a64e
+
+    <Compile Include="UsuarioNegocio.cs" />
+    <Compile Include="Validar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ValidacionesUtils.cs" />
+
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Datos\Datos.csproj">
-      <Project>{6e0d8fe3-7eaa-45b0-a363-d14d2cb1fce9}</Project>
+      <Project>{f8d43c45-c075-4da7-97a7-401b6aa05e2a}</Project>
       <Name>Datos</Name>
     </ProjectReference>
     <ProjectReference Include="..\Persistencia\Persistencia.csproj">
-      <Project>{d70d39da-312d-45da-a378-fd222ec9672f}</Project>
+      <Project>{ac403d4a-c5ef-4fc2-b087-6d853ce04dc4}</Project>
       <Name>Persistencia</Name>
     </ProjectReference>
   </ItemGroup>
