Agregado capa de persistencia

--- a/TemplateTPIntegrador/Persistencia/Persistencia.csproj
+++ b/TemplateTPIntegrador/Persistencia/Persistencia.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D70D39DA-312D-45DA-A378-FD222EC9672F}</ProjectGuid>
+    <ProjectGuid>{AC403D4A-C5EF-4FC2-B087-6D853CE04DC4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Persistencia</RootNamespace>
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,12 +44,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UTILS\LoginPersistencia.cs" />
+
+    <Compile Include="Utils\WebHelper.cs" />
+    <Compile Include="UsuarioService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Datos\Datos.csproj">
-      <Project>{6e0d8fe3-7eaa-45b0-a363-d14d2cb1fce9}</Project>
+      <Project>{f8d43c45-c075-4da7-97a7-401b6aa05e2a}</Project>
       <Name>Datos</Name>
     </ProjectReference>
   </ItemGroup>
